--- a/app/src/main/res/layout/activity_f1_section_01.xml
+++ b/app/src/main/res/layout/activity_f1_section_01.xml
@@ -20,7 +20,6 @@
         android:layoutDirection="rtl">
 
         <LinearLayout
-            android:id="@+id/ll01"
             style="@style/linearlayout_view">
 
             <TextView
@@ -28,7 +27,7 @@
                 android:text="@string/Section1" />
 
             <LinearLayout
-                android:id="@+id/fldGrpSecA01"
+                android:id="@+id/ll01"
                 style="@style/linearlayout_view_wt_bound">
 
                 <!--RSID-->
@@ -45,12 +44,12 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RSID"
                             style="@style/textInput"
+                            android:inputType="number"
                             android:hint="###-##"
                             android:textColor="@color/colorPrimary"
                             app:defaultValue=""
                             app:mask="###-##"
-                            app:pattern="[0-9]{3,3}-[^0-9]{2,2}"
-                            app:type="equal" />
+                            app:type="equal" /><!--app:pattern="[0-9]{3,3}-[^0-9]{2,2}"-->
 
                     </LinearLayout>
 
@@ -70,12 +69,13 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RS7"
                             style="@style/textInput"
+                            android:inputType="number"
                             android:hint="@string/RS7"
                             android:textColor="@color/colorPrimary"
                             app:defaultValue=""
                             app:mask="#####-#######-#"
-                            app:pattern="[0-9]{5,5}-[^0-9]{7,7}-[^0-9]{1,1}"
-                            app:type="equal" />
+
+                            app:type="equal" /><!--app:pattern="[0-9]{5,5}-[^0-9]{7,7}-[^0-9]{1,1}"-->
 
                     </LinearLayout>
 
@@ -95,12 +95,13 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RS8"
                             style="@style/textInput"
+                            android:inputType="number"
                             android:hint="@string/RS8"
                             android:textColor="@color/colorPrimary"
                             app:defaultValue=""
                             app:mask="#####-#######-#"
-                            app:pattern="[0-9]{5,5}-[^0-9]{7,7}-[^0-9]{1,1}"
-                            app:type="equal" />
+
+                            app:type="equal" /><!--app:pattern="[0-9]{5,5}-[^0-9]{7,7}-[^0-9]{1,1}"-->
 
                     </LinearLayout>
 
@@ -214,6 +215,7 @@
                             style="@style/textview_fm_lst_h" />
 
                     </LinearLayout>
+
                 </android.support.v7.widget.CardView>
 
 
@@ -675,8 +677,7 @@
                     android:background="@android:color/holo_green_light"
                     android:onClick='@{() -> callback.BtnContinue()}'
                     android:text="@string/start_interview"
-                    android:textColor="@color/white"
-                    android:visibility="@{pocfa14a.checked ? View.VISIBLE : View.GONE}" />
+                    android:textColor="@color/white" />
 
                 <Button
                     android:id="@+id/btn_End"
@@ -686,8 +687,7 @@
                     android:background="@android:color/holo_red_light"
                     android:onClick='@{() -> callback.BtnEnd()}'
                     android:text="@string/end_interview"
-                    android:textColor="@color/white"
-                    android:visibility="@{!pocfa14a.checked ? View.VISIBLE : View.GONE}" />
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
