--- a/app/src/main/res/layout/activity_f1_section_01.xml
+++ b/app/src/main/res/layout/activity_f1_section_01.xml
@@ -19,8 +19,7 @@
         android:layout_height="wrap_content"
         android:layoutDirection="rtl">
 
-        <LinearLayout
-            style="@style/linearlayout_view">
+        <LinearLayout style="@style/linearlayout_view">
 
             <TextView
                 style="@style/textview_fm_lst_h"
@@ -44,12 +43,13 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RSID"
                             style="@style/textInput"
-                            android:inputType="number"
                             android:hint="###-##"
+                            android:inputType="number"
                             android:textColor="@color/colorPrimary"
                             app:defaultValue=""
                             app:mask="###-##"
-                            app:type="equal" /><!--app:pattern="[0-9]{3,3}-[^0-9]{2,2}"-->
+                            app:pattern="[0-9]{3,3}-[^0-9]{2,2}"
+                            app:type="equal" />
 
                     </LinearLayout>
 
@@ -69,13 +69,13 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RS7"
                             style="@style/textInput"
+                            android:hint="@string/num78"
                             android:inputType="number"
-                            android:hint="@string/RS7"
                             android:textColor="@color/colorPrimary"
                             app:defaultValue=""
                             app:mask="#####-#######-#"
-
-                            app:type="equal" /><!--app:pattern="[0-9]{5,5}-[^0-9]{7,7}-[^0-9]{1,1}"-->
+                            app:pattern="[0-9]{5,5}-[^0-9]{7,7}-[^0-9]{1,1}"
+                            app:type="equal" />
 
                     </LinearLayout>
 
@@ -95,13 +95,13 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/RS8"
                             style="@style/textInput"
+                            android:hint="@string/num78"
                             android:inputType="number"
-                            android:hint="@string/RS8"
                             android:textColor="@color/colorPrimary"
                             app:defaultValue=""
                             app:mask="#####-#######-#"
-
-                            app:type="equal" /><!--app:pattern="[0-9]{5,5}-[^0-9]{7,7}-[^0-9]{1,1}"-->
+                            app:pattern="[0-9]{5,5}-[^0-9]{7,7}-[^0-9]{1,1}"
+                            app:type="equal" />
 
                     </LinearLayout>
 
