--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -188,7 +188,7 @@
                 </android.support.v7.widget.CardView>
 
                 <!--RS13-C H W-->
-                <android.support.v7.widget.CardView
+                <!--<android.support.v7.widget.CardView
                     style="@style/cardView"
                     android:visibility="gone">
 
@@ -218,7 +218,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </android.support.v7.widget.CardView>-->
 
 
 
