--- a/app/src/main/res/layout/activity_f1_section02.xml
+++ b/app/src/main/res/layout/activity_f1_section02.xml
@@ -63,6 +63,7 @@
 
             <!--RS18 - Radio-->
             <android.support.v7.widget.CardView
+                android:id="@+id/RS18cv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
